--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Product component styling */
+.product-card {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 10px;
+  width: 300px;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+}
+
+.product-card:hover {
+  border: 1px solid #6936f5;
+}
+
+.product-title {
+  height: 7em;
+  margin: 10px 0 20px;
+}
+
+.product-thumbnail {
+  margin: 4px;
+  height: 200px;
+  width: 100%;
+}
+
+.product-thumbnail img {
+  object-fit: contain;
+  max-height: 200px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.product-thumbnail img:hover {
+  width: 101%;
+  height: 101%;
+}
+
+.product-info {
+  height: 14em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px;
+}
+.product-description {
+  font-size: 15px;
+  margin-bottom: 10px;
+  height: 75px;
+}
+
+.product-price {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.product-card button {
+  padding: 10px;
+  background-color: #6936f5;
   color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Products "gallery" styling */
+.products-gallery {
+  max-width: 1250px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
 }
