--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Judson&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -80,4 +82,122 @@
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
+}
+
+/* Homepage Styling */
+/* Sale Banner */
+.sale-text-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.sale-text {
+  font-family: "Judson", serif;
+  font-size: 48px;
+  margin-right: 40px;
+  height: 100px;
+  font-weight: 200;
+}
+
+.discount-amount {
+  font-family: "Judson", serif;
+  font-size: 96px;
+  height: 100px;
+  padding-top: 10px;
+  font-weight: 100;
+}
+
+.sale-text-small {
+  font-family: "Judson", serif;
+  font-size: 24px;
+  height: 100px;
+  padding-top: 30px;
+  margin-left: 10px;
+}
+
+.sale-text2 {
+  font-family: "Judson", serif;
+  font-size: 48px;
+  margin-left: 40px;
+  height: 100px;
+  padding-top: 40px;
+  font-weight: 200;
+}
+
+.sale-items {
+  display: flex;
+  justify-content: space-between;
+  margin: 40px 350px 20px 350px;
+}
+
+.shop-now-link {
+  font-family: "Judson", serif;
+  font-size: 24px;
+  color: #5c5c5c;
+  margin-bottom: 20px;
+}
+
+/* Product Categories Grid */
+.product-categories {
+  background-color: rgba(51, 51, 51, 1);
+}
+
+.product-grid {
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns: auto auto;
+  gap: 100px;
+  margin: 0 300px 0 300px;
+  padding: 100px 0 100px 0;
+}
+
+.product-container {
+  background-color: white;
+  width: 320px;
+  height: 297px;
+  font-family: "Judson", serif;
+  font-size: 24px;
+  border-radius: 10px;
+  padding-top: 20px;
+}
+
+.product-image {
+  margin-top: 21px;
+}
+
+.see-more-link {
+  color: rgba(0, 0, 0, 0.6);
+  margin-top: 21px;
+  font-size: 14px;
+}
+
+/* Navigation Bar */
+.nav-bar {
+  background-color: #333333;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  height: 45px;
+}
+
+.search-bar {
+  background-color: rgba(217, 217, 217, 0.75);
+  width: 200px;
+  height: 30px;
+  margin: 7px 0 0 40px;
+  border-radius: 5px;
+}
+
+.search-icon {
+  margin-right: 160px;
+  margin-top: 2px;
+}
+
+.web-links {
+  display: flex;
+  padding-top: 12px;
+}
+
+.link {
+  margin: 0 20px 0 20px;
 }
