--- a/src/App.css
+++ b/src/App.css
@@ -181,16 +181,29 @@
 }
 
 .search-bar {
+  display: flex;
+  align-items: center;
   background-color: rgba(217, 217, 217, 0.75);
-  width: 200px;
+  width: 250px;
   height: 30px;
   margin: 7px 0 0 40px;
   border-radius: 5px;
 }
 
 .search-icon {
-  margin-right: 160px;
   margin-top: 2px;
+}
+
+.search-input {
+  background-color: transparent;
+  border: none;
+  margin-left: 5px;
+  height: 30px;
+  width: 220px;
+}
+
+.search-input:focus {
+  outline: none;
 }
 
 .web-links {
@@ -202,6 +215,10 @@
   margin: 0 20px 0 20px;
 }
 
+.link:hover {
+  cursor: pointer;
+}
+
 .login-signup {
   margin-top: 5px;
   margin-right: 40px;
@@ -210,11 +227,19 @@
   border-radius: 10px;
 }
 
+.login-btn:hover {
+  cursor: pointer;
+}
+
 .login-btn {
   background-color: transparent;
   padding: 10px;
   border: none;
   border-radius: 10px;
+}
+
+.signup-btn:hover {
+  cursor: pointer;
 }
 
 .signup-btn {
