--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,7 @@ input[type="number"]::-webkit-outer-spin-button {
   border-radius: 10px;
   border: none;
   margin: 40px;
+  cursor: pointer;
 }
 
 .register-double {
@@ -234,6 +235,7 @@ select {
   border-radius: 10px;
   border: none;
   margin: 40px;
+  cursor: pointer;
 }
 
 .sign-in-form .dont-have {
