Components created for support and contact page

--- a/src/App.css
+++ b/src/App.css
@@ -209,6 +209,7 @@
 .web-links {
   display: flex;
   padding-top: 12px;
+  margin-right: 100px;
 }
 
 .link {
@@ -341,4 +342,62 @@
   padding: 10px;
   border: 1px solid #919191;
   border-radius: 10px;
+}
+
+/* Contact Component */
+.contact-container {
+  font-family: "Judson", serif;
+  margin: auto;
+  margin-top: 75px;
+  background-color: #d9d9d9;
+  width: fit-content;
+  padding: 30px;
+}
+
+.contact-info-container {
+  background-color: rgba(209, 85, 46, 0.9);
+  margin: auto;
+  width: fit-content;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.contact-content {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.contact-info {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.socials {
+  margin-top: 20px;
+}
+
+/* Support Page */
+.support-page {
+  font-family: "Judson", serif;
+  margin: 30px 50px 30px 50px;
+  width: fit-content;
+  text-align: left;
+}
+
+.support-title {
+  margin-bottom: 30px;
+}
+
+.support-content-container {
+  background-color: #ccc;
+  padding: 15px;
+  border-radius: 10px;
+}
+
+.support-info {
+  margin-bottom: 20px;
+}
+
+.support-faq {
+  margin-top: 10px;
 }
