--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,6 @@ a {
   flex-wrap: wrap;
 }
 
-glen-updates
 /* Number Input With Buttons */
 .number-input {
   display: flex;
@@ -364,7 +363,7 @@ select {
   color: black;
 }
 /* Homepage Styling */
-/* Sale Banner */
+/* Featured Banner */
 .sale-banner-wrapper {
   display: flex;
   justify-content: center;
@@ -689,7 +688,6 @@ select {
 }
 
 /* Header component styling */
-
 .header {
   width: 100%;
   height: 170px;
@@ -698,6 +696,7 @@ select {
   background-color: #d1552e;
   color: #fff;
   display: flex;
+
   justify-content: center;
   align-items: center;
   padding-bottom: 25px;
@@ -719,7 +718,7 @@ select {
   font-size: 55px;
 }
 
-/* Footer styling*/
+/* Footer styling */
 .footer-wrapper {
   width: 100%;
   background-color: #424046;
@@ -745,17 +744,14 @@ select {
 }
 
 .footer-bottom {
-  /* display: flex; */
   width: 100%;
-  /* border: #97db64 1px solid; */
 }
-
+/* Footer Top styling */
 #left,
 #center,
 #right {
   width: 33%;
   text-align: left;
-  /* padding-left: 30px; */
 }
 
 #left {
@@ -775,6 +771,7 @@ select {
   justify-content: right;
 }
 
+/* Subscribe email form */
 .form {
   position: relative;
   display: inline-block;
@@ -816,6 +813,7 @@ select {
   margin-top: 10px;
 }
 
+/* Horizontal line footer bottom */
 hr {
   border: none;
   height: 2px;
@@ -829,6 +827,7 @@ hr {
   padding-bottom: 3px;
 }
 
+/* CC Thumbnails for footer */
 .thumbnails {
   display: flex;
   justify-content: space-evenly;
@@ -840,7 +839,6 @@ hr {
 }
 
 /* Featured Page */
-
 .featured-page {
   font-family: "Judson", serif;
   margin: 30px 50px 30px 50px;
