--- a/src/App.css
+++ b/src/App.css
@@ -615,7 +615,7 @@ select {
 .purchase-container {
   display: flex;
   justify-content: space-between;
-  border: #3e8e41 solid 2px;
+  /* border: #3e8e41 solid 2px; */
 }
 
 .size-quantity-wrapper {
